[taotao-cloud-project-1270] fix[reflectionUtil newInstance]